--- a/app/views/layouts/lookbook/shell.html.erb
+++ b/app/views/layouts/lookbook/shell.html.erb
@@ -28,7 +28,7 @@
                       <span class="opacity-60 mr-1">Lookbook</span>
                       <span class="mr-6">v<%= Lookbook::VERSION %></span>
                       <a href="https://github.com/allmarkedup/lookbook" target="_blank" class="ml-auto opacity-70">
-                        <%= render_component :icon, name: :github, size: 3 %>
+                        <%= icon  :github, size: 3 %>
                       </a>
                     </div>
                     <div class="px-3 py-2">
