--- a/app/views/lookbook/404.html.erb
+++ b/app/views/lookbook/404.html.erb
@@ -1,6 +1,6 @@
 <div class="bg-white flex flex-col items-center justify-center h-screen w-full">
   <div class="px-4 text-center max-w-sm">
-    <%= render_component :icon, name: :alert_triangle, size: 10, class: "text-red-300 mx-auto" %>
+    <%= icon  :alert_triangle, size: 10, class: "text-red-300 mx-auto" %>
     <div class="mt-3">
       <h5 class="text-base">
         <%== message %>
