--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -25,7 +25,7 @@
         <% if @previous_page %>
           <a href="<%= lookbook_page_path @previous_page.lookup_path %>"
             class="flex items-center flex-none">
-            <%= render_component :icon, name: :arrow_left, size: 4, class: "hover:text-indigo-800" %>
+            <%= icon  :arrow_left, size: 4, class: "hover:text-indigo-800" %>
             <span class="ml-2 underline"><%= @previous_page.title %></span>
           </a>
         <% end %>
@@ -34,7 +34,7 @@
           <a href="<%= lookbook_page_path @next_page.lookup_path %>"
             class="flex items-center flex-none ml-auto">
             <span class="mr-2 underline"><%= @next_page.title %></span>
-            <%= render_component :icon, name: :arrow_right, size: 4, class: "hover:text-indigo-800" %>
+            <%= icon  :arrow_right, size: 4, class: "hover:text-indigo-800" %>
           </a>
         <% end %>
       </footer>
