--- a/app/views/lookbook/previews/inputs/_toggle.html.erb
+++ b/app/views/lookbook/previews/inputs/_toggle.html.erb
@@ -1,4 +1,4 @@
-<div x-data="param('<%= name %>', <%= value %>)" data-morph-strategy="replace">
+<div x-data="param('<%= name %>', <%= j(value) %>)" data-morph-strategy="replace">
   <button type="button"
     class="relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-400"
     :class="{'bg-indigo-500': value, 'bg-gray-300': !value}"
