--- a/app/views/lookbook/previews/inputs/_text.html.erb
+++ b/app/views/lookbook/previews/inputs/_text.html.erb
@@ -3,6 +3,6 @@
   type="<%= input_type %>"
   name="<%= name %>"
   value="<%= value %>"
-  x-data="param('<%= name %>', '<%= value %>', {debounce: 300})"
+  x-data="param('<%= name %>', '<%= j(value) %>', {debounce: 300})"
   x-model="value"
   @keyup.stop>
