--- a/app/components/lookbook/tabs/dropdown_tab/component.html.erb
+++ b/app/components/lookbook/tabs/dropdown_tab/component.html.erb
@@ -1,5 +1,5 @@
 <%= render_component_tag :button,
-  x_ref: @name,
+  "x-ref": @name,
   class: [
     "whitespace-nowrap px-4 border-l-2 cursor-pointer block w-full text-left",
     {
