--- a/app/components/lookbook/tabs/tab/component.html.erb
+++ b/app/components/lookbook/tabs/tab/component.html.erb
@@ -1,6 +1,6 @@
 <%= render_component_tag :button,
   id: @id,
-  x_ref: @name,
+  "x-ref": @name,
   class: [
     "whitespace-nowrap cursor-pointer pt-2.5 pb-1.5 border-b-2",
     {
