Clean up first run and landing page logic, fix up tests

--- a/app/components/lookbook/nav/component.html.erb
+++ b/app/components/lookbook/nav/component.html.erb
@@ -1,12 +1,8 @@
 <%= render_component_tag class: "flex flex-col overflow-hidden h-full",
   "@filter:change.stop": "filter($event.detail.text)" do %>
   
-  <% if label.present? %>
-    <%= render_component :toolbar do |toolbar| %>
-      <% toolbar.section padded: true do %>
-        <h4 class="pt-1"><%= label %></h4>
-      <% end %>
-    <% end %>
+  <% if toolbar %>
+    <%= toolbar %>
   <% end %>
 
   <% if filter && items.any? %>
@@ -21,11 +17,11 @@
         <%= safe_join(items) %>
       </ul>
       <div class="p-4 text-center" x-show="empty" x-cloak>
-        <h4 class="opacity-50 italic">No matching <%= label.downcase %>.</h4>
+        <h4 class="opacity-50 italic">No matching results.</h4>
       </div>
     <% else %>
       <div class="p-4 text-center">
-        <h4 class="opacity-50 italic">No <%= label.downcase %> available.</h4>
+        <h4 class="opacity-50 italic">Nothing here yet.</h4>
       </div>
     <% end %>
   </div>
