--- a/app/views/lookbook/index.html.erb
+++ b/app/views/lookbook/index.html.erb
@@ -1,14 +1,27 @@
-<div id="welcome-message" class="flex flex-col h-full w-full">
-  <div class="flex flex-col items-center justify-center h-full">
-    <div class="p-4 text-center mx-auto">
-      <%= icon  :layers, size: 10, class: "opacity-30 mx-auto" %>
-      <div class="mt-6 text-base opacity-40">
-        <% if Lookbook.previews.any? %>
-          <h5>Select a preview to get started</h5>
-        <% else %>
-          <p>Create a <a href="https://viewcomponent.org/guide/previews.html" target="_blank">preview file</a> to get started.</p>
-      <% end %>
+<div id="landing" class="flex flex-col items-center justify-center h-full w-full">
+  <div class="p-4 text-center mx-auto">
+    <% if Lookbook.previews? %>
+      <div id="landing-with-content">
+        <h5 class="text-lg opacity-50"><%= config.project_name %></h5>
+        <div class="mt-2 italic opacity-30 max-w-[400px]">
+          <p>
+            Select a preview from the nav to get started.
+          </p>
+        </div>
       </div>
-    </div>
+    <% else %>
+      <div id="landing-no-content">
+        <h5 class="text-lg font-bold opacity-80"><%= config.project_name %></h5>
+        <div class="mt-3 italic opacity-40 max-w-[400px]">
+          <p>
+            Nothing here yet! 
+            <a class="underline" href="https://viewcomponent.org/guide/previews.html" target="_blank">
+              Create a preview
+            </a>
+            to get started.
+          </p>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
