--- a/docs/frontend/styles/index.css
+++ b/docs/frontend/styles/index.css
@@ -8,6 +8,10 @@
 @tailwind utilities;
 
 @layer base {
+  [x-cloak] {
+    display: none !important;
+  }
+
   ::-webkit-scrollbar {
     @apply w-1 h-1;
   }
@@ -26,12 +30,10 @@
 }
 
 @layer components {
+  /* Layout */
+
   .layout-container {
     @apply grid grid-cols-[220px_1fr] lg:grid-cols-[280px_1fr] xl:grid-cols-[calc(((100vw_-_1280px)_/_2)_+_280px)_1fr] grid-flow-row overflow-hidden;
-  }
-
-  .layout-container .layout-column {
-    @apply overflow-y-scroll;
   }
 
   .layout-container .layout-content {
@@ -39,7 +41,7 @@
   }
 
   .layout-container .layout-column:first-child {
-    @apply border-r border-gray-300 flex;
+    @apply border-r border-transparent flex;
   }
 
   .layout-container .layout-column:first-child .layout-content {
@@ -50,221 +52,217 @@
     @apply max-w-[1000px] w-full;
   }
 
-  .lede {
-    @apply text-xl;
-  }
-}
+  /* Code highlighting */
 
-@layer components {
-  .highlight {
-    @apply !bg-white;
+  #content pre.highlight {
+    @apply bg-white text-gray-800 border border-gray-200 rounded;
   }
-  .highlight .hll {
+  #content pre.highlight .hll {
     background-color: #f8f8f8;
     border: 1px solid #ccc;
     padding: 6px 10px;
     border-radius: 3px;
   }
-  .highlight .c {
+  #content pre.highlight .c {
     color: #999988;
     font-style: italic;
   }
-  .highlight .err {
+  #content pre.highlight .err {
     /* color: #a61717;
         background-color: #e3d2d2; */
   }
-  .highlight .k {
+  #content pre.highlight .k {
     font-weight: bold;
   }
-  .highlight .o {
+  #content pre.highlight .o {
     font-weight: bold;
   }
-  .highlight .cm {
+  #content pre.highlight .cm {
     color: #999988;
     font-style: italic;
   }
-  .highlight .cp {
+  #content pre.highlight .cp {
     color: #999999;
     font-weight: bold;
   }
-  .highlight .c1 {
+  #content pre.highlight .c1 {
     color: #999988;
     font-style: italic;
   }
-  .highlight .cs {
+  #content pre.highlight .cs {
     color: #999999;
     font-weight: bold;
     font-style: italic;
   }
-  .highlight .gd {
+  #content pre.highlight .gd {
     color: #000000;
     background-color: #ffdddd;
   }
-  .highlight .gd .x {
+  #content pre.highlight .gd .x {
     color: #000000;
     background-color: #ffaaaa;
   }
-  .highlight .ge {
+  #content pre.highlight .ge {
     font-style: italic;
   }
-  .highlight .gr {
+  #content pre.highlight .gr {
     color: #aa0000;
   }
-  .highlight .gh {
+  #content pre.highlight .gh {
     color: #999999;
   }
-  .highlight .gi {
+  #content pre.highlight .gi {
     color: #000000;
     background-color: #ddffdd;
   }
-  .highlight .gi .x {
+  #content pre.highlight .gi .x {
     color: #000000;
     background-color: #aaffaa;
   }
-  .highlight .go {
+  #content pre.highlight .go {
     color: #888888;
   }
-  .highlight .gp {
+  #content pre.highlight .gp {
     color: #555555;
   }
-  .highlight .gs {
+  #content pre.highlight .gs {
     font-weight: bold;
   }
-  .highlight .gu {
+  #content pre.highlight .gu {
     color: #800080;
     font-weight: bold;
   }
-  .highlight .gt {
+  #content pre.highlight .gt {
     color: #aa0000;
   }
-  .highlight .kc {
+  #content pre.highlight .kc {
     font-weight: bold;
   }
-  .highlight .kd {
+  #content pre.highlight .kd {
     font-weight: bold;
   }
-  .highlight .kn {
+  #content pre.highlight .kn {
     font-weight: bold;
   }
-  .highlight .kp {
+  #content pre.highlight .kp {
     font-weight: bold;
   }
-  .highlight .kr {
+  #content pre.highlight .kr {
     font-weight: bold;
   }
-  .highlight .kt {
+  #content pre.highlight .kt {
     color: #445588;
     font-weight: bold;
   }
-  .highlight .m {
+  #content pre.highlight .m {
     color: #009999;
   }
-  .highlight .s {
+  #content pre.highlight .s {
     color: #dd1144;
   }
-  .highlight .n {
+  #content pre.highlight .n {
     color: #333333;
   }
-  .highlight .na {
+  #content pre.highlight .na {
     color: teal;
   }
-  .highlight .nb {
+  #content pre.highlight .nb {
     color: #0086b3;
   }
-  .highlight .nc {
+  #content pre.highlight .nc {
     color: #445588;
     font-weight: bold;
   }
-  .highlight .no {
+  #content pre.highlight .no {
     color: teal;
   }
-  .highlight .ni {
+  #content pre.highlight .ni {
     color: purple;
   }
-  .highlight .ne {
+  #content pre.highlight .ne {
     color: #990000;
     font-weight: bold;
   }
-  .highlight .nf {
+  #content pre.highlight .nf {
     color: #990000;
     font-weight: bold;
   }
-  .highlight .nn {
+  #content pre.highlight .nn {
     color: #555555;
   }
-  .highlight .nt {
+  #content pre.highlight .nt {
     color: navy;
   }
-  .highlight .nv {
+  #content pre.highlight .nv {
     color: teal;
   }
-  .highlight .ow {
+  #content pre.highlight .ow {
     font-weight: bold;
   }
-  .highlight .w {
+  #content pre.highlight .w {
     color: #bbbbbb;
   }
-  .highlight .mf {
+  #content pre.highlight .mf {
     color: #009999;
   }
-  .highlight .mh {
+  #content pre.highlight .mh {
     color: #009999;
   }
-  .highlight .mi {
+  #content pre.highlight .mi {
     color: #009999;
   }
-  .highlight .mo {
+  #content pre.highlight .mo {
     color: #009999;
   }
-  .highlight .sb {
+  #content pre.highlight .sb {
     color: #dd1144;
   }
-  .highlight .sc {
+  #content pre.highlight .sc {
     color: #dd1144;
   }
-  .highlight .sd {
+  #content pre.highlight .sd {
     color: #dd1144;
   }
-  .highlight .s2 {
+  #content pre.highlight .s2 {
     color: #dd1144;
   }
-  .highlight .se {
+  #content pre.highlight .se {
     color: #dd1144;
   }
-  .highlight .sh {
+  #content pre.highlight .sh {
     color: #dd1144;
   }
-  .highlight .si {
+  #content pre.highlight .si {
     color: #dd1144;
   }
-  .highlight .sx {
+  #content pre.highlight .sx {
     color: #dd1144;
   }
-  .highlight .sr {
+  #content pre.highlight .sr {
     color: #009926;
   }
-  .highlight .s1 {
+  #content pre.highlight .s1 {
     color: #dd1144;
   }
-  .highlight .ss {
+  #content pre.highlight .ss {
     color: #990073;
   }
-  .highlight .bp {
+  #content pre.highlight .bp {
     color: #999999;
   }
-  .highlight .vc {
+  #content pre.highlight .vc {
     color: teal;
   }
-  .highlight .vg {
+  #content pre.highlight .vg {
     color: teal;
   }
-  .highlight .vi {
+  #content pre.highlight .vi {
     color: teal;
   }
-  .highlight .il {
+  #content pre.highlight .il {
     color: #009999;
   }
-  .highlight .gc {
+  #content pre.highlight .gc {
     color: #999;
     background-color: #eaf2f5;
   }
